<resources>
    <string name="app_name">Notes</string>
    <string name="all_notes">All notes</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_category">Add category</string>
    <string name="edit_category">Edit category</string>
    <string name="select_categories">Select Categories</string>
    <string name="category_exists">This category already exists</string>
    <string name="delete_note">Delete note</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="note">Note</string>
    <string name="empty">Empty</string>
    <string name="category_name_is_empty">Category name is empty</string>
    <string name="reminders">Reminders</string>
    <string name="notifi_channel_description">Reminders for notes</string>
    <string name="enter_title">Enter title</string>
    <string name="pick_note">Pick note</string>
    <string name="note_not_exist">This note does not exist</string>
    <string name="select_time">Select time</string>
    <string name="description">Description</string>
    <string name="no_notes">No notes</string>
    <string name="open_note">Open note</string>
    <string name="open_app">Open app</string>
    <string name="pick_note_or_app">Pick note or app</string>
    <string name="add_reminder">Add reminder</string>
    <string name="must_grant_notifications_permission">Grant permission to send notifications in the settings</string>
    <string name="warning">Important!</string>
    <string name="warning_text">On some manufacturers\' devices, you need to give the application permissions to launch services (to update reminders after restarting the device) and to work in the background (to display reminders). It may be necessary to issue these permissions on your device model. Review the application settings and issue them if you find the necessary permissions. Most likely you don\'t have these settings, but some manufacturers, such as realme, add these settings. If you don\'t find these settings, then you don\'t need to enable anything, everything will work for you anyway.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="tasks">Tasks</string>
    <string name="all_tasks">All tasks</string>
    <string name="want_to_do">What do you want to do</string>
    <string name="edit">Edit</string>
    <string name="enter_name_of_task">Enter the name of the task</string>
    <string name="delete_task">Delete task</string>
    <string name="color">Color</string>
    <string name="deselect">Deselect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>