<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/note_item"
        android:title="@string/app_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/category_item"
        android:title="@string/categories"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reminder_item"
        android:title="@string/reminders"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_item"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>